--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/avif+xml" href="./src/im/logo.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeChat</title>
+    <title>VConnect</title>
   </head>
   <body>
     <div id="root"></div>
